[package]
name = "sgammer"
version = "0.1.0"
authors = ["Marco Napetti <marco.napetti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "16.1"
geo = { version = "0.12", features = ["use-serde"] }
geo-raycasting = "0.1"
serde_json = "1.0"
log = "0.4"
env_logger = "0.7"
